# scholenrs

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  client.rs  error.rs  lib.rs
src/models/: student.rs
