[package]
name = "scholen"
version = "0.1.0"
description = "Small wrapper around Line/Scholen.net LMS"
readme = "README.md"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
ureq = "2.5.0"
url = "2.3.1"
